# upbkit

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  NOTES.md  NSData+UPBStringView.h  NSString+UPBStringView.h  NSString+UPBStringView.m  README.md  TODO.md  UPBArena.h  UPBArena.m  UPBStringView.h  UPBStringView.m
GPBExtensions/: BUILD  GPBMessage+UPBDecoding.h  GPBMessage+UPBDecoding.mm  GPBMessage+UPBMetadata.h  GPBMessage+UPBMetadata.mm  TODO.md  UPBMetadata.h  UPBMetadataMap.h  UPBMetadataMap.mm
GPBExtensions/tests/: .gitignore  BUILD  GPBMessage+UPBDecodingTest.m  Info.plist  README.md  SwiftProtobufParser.swift  UPBKitBrotli.h  UPBKitBrotli.m  UPBKitTestProtos.h  UPBKitTestProtos.m  benchmark.mm
GPBExtensions/tests/protos/: BUILD  README.md  amalgamate_pbobjc.sh
GPBExtensions/tests/protos/basic/: UPBKitTestBasic-no_benchmark.pb.br  basic.proto
GPBExtensions/tests/protos/descriptor/: GPBFileDescriptorSet.pb.br  GPBFileDescriptorSet.pb.br.README  descriptor.proto  descriptor.proto.README
